RESOLVED FIXED184408
CRASH() should call abort() except on Darwin and in developer builds
https://bugs.webkit.org/show_bug.cgi?id=184408
Summary CRASH() should call abort() except on Darwin and in developer builds
Michael Catanzaro
Reported 2018-04-08 20:50:41 PDT
CRASH() should call abort() except on Darwin and in developer builds, as discussed at https://lists.webkit.org/pipermail/webkit-dev/2018-March/029903.html. This should be slightly nicer than dereferencing 0xbadbeef. On Darwin, CRASH() uses a breakpoint trap, which seems to corrupt the stack on Linux, so we can't do that. Continue to call WTFCrash() in developer mode, and make no changes to WTFCrash(), since it is reportedly useful in nightmare scenarios where core dumps are unavailable: https://lists.webkit.org/pipermail/webkit-dev/2018-March/029907.html
Attachments
Patch (1.71 KB, patch)
2018-04-08 20:53 PDT, Michael Catanzaro
no flags
Patch (2.06 KB, patch)
2018-11-25 08:27 PST, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2018-04-08 20:53:57 PDT
Michael Catanzaro
Comment 2 2018-04-08 20:55:34 PDT
Comment on attachment 337478 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=337478&action=review > Source/WTF/wtf/Assertions.h:234 > +#elif !ENABLE(DEVELOPER_MODE) && !OS(DARWIN) Note that I don't check NDEBUG here specifically in order to allow Adrian to use WTFCrash() in "release" builds.
Michael Catanzaro
Comment 3 2018-05-21 08:26:24 PDT
Pinging GTK/WPE reviewers.
Michael Catanzaro
Comment 4 2018-11-23 11:52:46 PST
(In reply to Michael Catanzaro from comment #0) > CRASH() should call abort() except on Darwin and in developer builds, as > discussed at > https://lists.webkit.org/pipermail/webkit-dev/2018-March/029903.html. This > should be slightly nicer than dereferencing 0xbadbeef. Ping any reviewers.
Daniel Bates
Comment 5 2018-11-23 20:13:54 PST
Comment on attachment 337478 [details] Patch OK
WebKit Commit Bot
Comment 6 2018-11-24 07:13:24 PST
Comment on attachment 337478 [details] Patch Clearing flags on attachment: 337478 Committed r238469: <https://trac.webkit.org/changeset/238469>
WebKit Commit Bot
Comment 7 2018-11-24 07:13:25 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2018-11-24 07:14:27 PST
Michael Catanzaro
Comment 9 2018-11-25 08:22:52 PST
Reverted r238469 for reason: Broke the build Committed r238477: <https://trac.webkit.org/changeset/238477>
Michael Catanzaro
Comment 10 2018-11-25 08:27:50 PST
WebKit Commit Bot
Comment 11 2018-11-25 10:22:38 PST
Comment on attachment 355596 [details] Patch Clearing flags on attachment: 355596 Committed r238478: <https://trac.webkit.org/changeset/238478>
WebKit Commit Bot
Comment 12 2018-11-25 10:22:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.